--- a/private/sass/select2.scss
+++ b/private/sass/select2.scss
@@ -1,18 +1,16 @@
 @import "components/variables";
 
-@media (prefers-color-scheme: dark) {
-    .select2-container--default .select2-selection--single, .select2-dropdown {
-        background: var(--dca-white, var(--body-bg, $django-dark-bg));
-    }
-    .select2-container--default .select2-results__option[aria-selected=true] {
-        background: var(--dca-gray, $django-dark-select);
-    }
-    .select2-container--default .select2-selection--single .select2-selection__rendered {
-        color: var(--dca-black, $django-dark-color);
-    }
-    .popover {
-        background: var(--dca-white, $django-dark-bg);  // standard django admin
-    }
+.select2-container--default .select2-selection--single, .select2-dropdown {
+    background: var(--dca-white, var(--body-bg, white));
+}
+.select2-container--default .select2-results__option[aria-selected=true] {
+    background: var(--dca-gray, var(--body-quiet-color, #666));
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: var(--dca-black, var(--body-fg, #000));
+}
+.popover {
+    background: var(--dca-white, var(--body-bg, white));  // standard django admin
 }
 
 ul.select2-results__options {
